JU-1307 tech debt update dev