@@ -19,66 +19,74 @@
         <skip.unit.tests>false</skip.unit.tests>
 
         <java.version>21</java.version>
-        <java-session-handler.version>4.1.1</java-session-handler.version>
-        <private-api-sdk-java.version>4.0.195</private-api-sdk-java.version>
+        <java-session-handler.version>4.1.3</java-session-handler.version>
+        <private-api-sdk-java.version>4.0.255</private-api-sdk-java.version>
         <sdk-manager-java.version>3.0.9</sdk-manager-java.version>
         <rest-service-common-library.version>2.0.2</rest-service-common-library.version>
         <environment-reader-library.version>3.0.1</environment-reader-library.version>
-        <common-web-java.version>3.0.23</common-web-java.version>
+        <common-web-java.version>3.0.34</common-web-java.version>
         <commons-fileupload2-jakarta-servlet6.version>2.0.0-M2</commons-fileupload2-jakarta-servlet6.version>
-        <awaitility.version>4.2.2</awaitility.version>
-        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
-        <nimbus-jose-jwt.version>9.41.1</nimbus-jose-jwt.version>
-        <test-containers.version>1.20.4</test-containers.version>
+        <awaitility.version>4.3.0</awaitility.version>
+        <hibernate-validator.version>8.0.2.Final</hibernate-validator.version>
+        <nimbus-jose-jwt.version>10.0.2</nimbus-jose-jwt.version>
+        <test-containers.version>1.20.6</test-containers.version>
 
         <!-- Logging -->
-        <structured-logging.version>3.0.14</structured-logging.version>
+        <structured-logging.version>3.0.20</structured-logging.version>
 
-        <thymeleaf-layout-dialect.version>3.3.0</thymeleaf-layout-dialect.version>
+        <thymeleaf-layout-dialect.version>3.4.0</thymeleaf-layout-dialect.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
-        <equalsverifier.version>3.16.2</equalsverifier.version>
+        <equalsverifier.version>3.19.1</equalsverifier.version>
         <system-lambda.version>1.2.1</system-lambda.version>
 
         <!-- Mockito -->
-        <mockito-core.version>5.13.0</mockito-core.version>
-        <mockito-junit-jupiter.version>5.13.0</mockito-junit-jupiter.version>
+        <mockito-core.version>5.16.0</mockito-core.version>
+        <mockito-junit-jupiter.version>5.16.0</mockito-junit-jupiter.version>
 
-        <junit-jupiter-params.version>5.10.0</junit-jupiter-params.version>
-        <junit-platform-engine.version>1.10.0</junit-platform-engine.version>
-        <junit-platform-launcher.version>1.10.0</junit-platform-launcher.version>
-        <junit-platform-commons.version>1.10.0</junit-platform-commons.version>
+        <junit-jupiter-params.version>5.12.0</junit-jupiter-params.version>
+        <junit-platform-engine.version>1.12.0</junit-platform-engine.version>
+        <junit-platform-launcher.version>1.12.0</junit-platform-launcher.version>
+        <junit-platform-commons.version>1.12.0</junit-platform-commons.version>
         <mock-server.version>5.15.0</mock-server.version>
 
         <!-- Security -->
         <web-security-java.version>3.1.0</web-security-java.version>
 
         <!-- Spring -->
-        <spring-boot-dependencies.version>3.3.9</spring-boot-dependencies.version>
-        <spring-test.version>6.1.14</spring-test.version>
-        <spring-webmvc.version>6.1.14</spring-webmvc.version>
+        <spring-boot-dependencies.version>3.4.3</spring-boot-dependencies.version>
+        <spring-test.version>6.2.3</spring-test.version>
+        <spring-webmvc.version>6.2.3</spring-webmvc.version>
         <spring-boot-maven-plugin.version>${spring-boot-dependencies.version}</spring-boot-maven-plugin.version>
 
         <!-- Maven -->
-        <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.5.0</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
-        <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
+        <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 
-        <!--sonar configuration-->
-        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
-        <sonar.java.binaries>${project.basedir}/target,${project.basedir}/target/*</sonar.java.binaries>
-        <sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
-        <sonar.login></sonar.login>
-        <sonar.password></sonar.password>
+        <!-- Sonar dependency -->
+        <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.projectKey>uk.gov.companieshouse:efs-submission-web</sonar.projectKey>
-        <sonar.projectName>efs-submission-web</sonar.projectName>
-
+        <sonar.sources>src/main</sonar.sources>
+        <sonar.tests>src/test</sonar.tests>
+        <sonar.verbose>true</sonar.verbose>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ${project.basedir}/target/site/jacoco/jacoco.xml,
+            ${project.basedir}/target/site/jacoco-it/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
+        <sonar.dependencyCheck.htmlReportPath>
+            ${project.basedir}/target/dependency-check-report.html
+        </sonar.dependencyCheck.htmlReportPath>
+        <sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
+        <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
     </properties>
 
     <dependencyManagement>
@@ -205,6 +213,10 @@
                 <exclusion>
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.ethlo.time</groupId>
+                    <artifactId>itu</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
